# MAI_OOP

./: .gitignore  variant.json
lab01/: CMakeLists.txt  Complex.cpp  Complex.h  main.cpp  test_01.txt  test_02.txt
lab02/: CMakeLists.txt  Complex.cpp  Complex.h  main.cpp  test_01.txt  test_02.txt
lab1/: CMakeLists.txt  figure.h  hexagon.cpp  hexagon.h  main.cpp  octagon.cpp  octagon.h  pentagon.cpp  pentagon.h  point.cpp
lab1/lab2/: hgf.cpp
lab2/: CMakeLists.txt  TNaryTree.cpp  TNaryTree.h  TNaryTree_item.cpp  TNaryTree_item.h  pentagon.cpp  point.h
lab3/: CMakeLists.txt  TNaryTree.cpp  TNaryTree.h  TNaryTree_item.cpp  TNaryTree_item.h  main.cpp
lab4/: CMakeLists.txt  TNaryTree.cpp  TNaryTree.h  TNaryTree_item.cpp  TNaryTree_item.h  main.cpp  pentagon.h  point.cpp  templates.cpp
lab5/: CMakeLists.txt  TNaryTree.cpp  TNaryTree.h  main.cpp
lab6/: CMakeLists.txt  TNaryTree.h  main.cpp
lad2/: CMakeLists.txt  figure.h  main.cpp
