cmake_minimum_required(VERSION 3.20)
project(lab1)

set(CMAKE_CXX_STANDARD 14)


add_executable(lab2
        figure.h
        main.cpp
        point.cpp
        point.h
        TNaryTree.cpp
        TNaryTree.h
        TNaryTree_item.cpp
        TNaryTree_item.h
        pentagon.cpp
        pentagon.h)
