cmake_minimum_required(VERSION 3.20)
project(lab3)

set(CMAKE_CXX_STANDARD 14)


add_executable(lab3
        figure.h
        main.cpp
        point.cpp
        point.h
        TNaryTree.cpp
        TNaryTree.h
        TNaryTree_item.cpp
        TNaryTree_item.h
        pentagon.cpp
        pentagon.h)