cmake_minimum_required(VERSION 3.20)
project(lab4)

set(CMAKE_CXX_STANDARD 14)


add_executable(lab4
        figure.h
        main.cpp
        point.cpp
        point.h
        TNaryTree.cpp
        TNaryTree.h
        templates.cpp
        TNaryTree_item.cpp
        TNaryTree_item.h
        pentagon.cpp
        pentagon.h)