cmake_minimum_required(VERSION 3.20)
project(lab5)

set(CMAKE_CXX_STANDARD 14)


add_executable(lab5
        Figure.h
        Hexagon.cpp
        Hexagon.h
        main.cpp
        Octagon.cpp
        Octagon.h
        Iterator.h
        TNaryTree.cpp
        TNaryTree.h
        Item.cpp
        Item.h
        Pentagon.cpp
        Pentagon.h)