cmake_minimum_required(VERSION 3.20)
project(lab6)

set(CMAKE_CXX_STANDARD 14)


add_executable(lab6
        Figure.h
        Hexagon.cpp
        Hexagon.h
        main.cpp
        TAllocationBlock.cpp
        TAllocationBlock.h
        Octagon.cpp
        Octagon.h
        TStack.cpp
        TStack.h
        TStackItem.cpp
        TStackItem.h
        Iterator.h
        TNaryTree.cpp
        TNaryTree.h
        Item.cpp
        Item.h
        Pentagon.cpp
        Pentagon.h)