cmake_minimum_required(VERSION 3.19)
project(MAI_OOP)

set(CMAKE_CXX_STANDARD 14)


add_executable(Rubish
        figure.h
        main.cpp
        point.cpp
        point.h
        TNaryTree.cpp
        TNaryTree.h
        TNaryTree_item.cpp
        TNaryTree_item.h
        pentagon.cpp
        pentagon.h)